# CudaDecoderJpegVer

./: .gitignore  AppDec.cpp  CMakeLists.txt
NvCodec/NvDecoder/: NvDecoder.cpp
